--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,14 @@
+# Environment variables
+.env
+.env.*
+
 # Dependencies
 node_modules/
-.pnp
-.pnp.js
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build outputs
 dist/
 build/
-coverage/
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
