--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.5"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -22,4 +24,4 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
-} 
+}
