--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,27 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.4.1",
+    "envalid": "^8.0.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.1",
-    "yahoo-finance2": "^2.9.1"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "googleapis": "^128.0.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.6",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "password-validator": "^5.3.0",
+    "xss-clean": "^0.1.4",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
